# claude-starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  demo_sequential_calling.py  search_tools.py
backend/fixes/: IMPLEMENTATION_GUIDE.md  improved_error_handling.py  test_fixes.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_integration.py  test_results_analysis.md  test_sequential_tool_calling.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh  test.sh
